--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Macatangay Portfolio</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    
+    <div class="navBar">
+        <div class="navBarContent">
+            <a class="active" href="#home">Home</a>
+            <a href="#news">About Me</a>
+            <img id="logo" src="assets/logo.jpg" alt="Logo">
+        </div>
+    </div>
+  
+
+
 </body>
 </html>
