Add the featured photo and previous projects in index.html, along with improving styles.css. Also added some .jpg files in assets folder

--- a/index.html
+++ b/index.html
@@ -8,13 +8,54 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <div class="navBar">
-        <div class="navBarContent">
-            <a class="active" href="#home">Home</a>
-            <a href="#news">About Me</a>
-            <img id="logo" src="assets/logo.jpg" alt="Logo">
+    <div class="overallPage">
+        <div class="navBar">
+            <div class="navBarContent">
+                <a class="active" href="#home">Home</a>
+                <a href="#news">About Me</a>
+                <img id="logo" src="assets/logo.jpg" alt="Logo">
+            </div>
+        </div>
+        <div class="bodyContent">
+            <div class="featPhotoContents">
+                This is Me :DD
+                <img id="featPhoto" src="assets/myPhoto.jpg" alt="myPhoto">
+        </div>
+        <div class="prevProj">
+            My Previous Projects
+            <div class="prevProjPhotos">
+                <img class="prevProjPhotosContent" id="proj1" src="assets/proj1.jpg" alt="proj1">
+                <img class="prevProjPhotosContent"  id="proj2" src="assets/proj2.jpg" alt="proj2">
+                <img class="prevProjPhotosContent"  id="proj3" src="assets/proj3.jpg" alt="proj3">
+                <img class="prevProjPhotosContent"  id="proj4" src="assets/proj4.jpg" alt="proj4">
+            </div>
+        </div>
+
+        <div class="aboutMe">
+            <div class="skills">
+                My Skills
+                <ul>
+                    <li> Coding </li>
+                    <li> Coding </li>
+                    <li> Coding </li>
+                    <li> Coding </li>
+                    <li> Coding </li>
+                </ul>
+            </div>
+            <div class="autobio">
+                AutoBiography
+                <ul>
+                    <li> Coding </li>
+                    <li> Coding </li>
+                    <li> Coding </li>
+                    <li> Coding </li>
+                    <li> Coding </li>
+                </ul>
+            </div>
+
         </div>
     </div>
+
   
 
 
