feat: improv navbar

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <div class="overallPage">
         <div class="navBar">
             <div class="navBarContent">
-                <a class="active" href="#home">Home</a>
+                <a href="#home">Home</a>
                 <a href="#news">About Me</a>
+            </div>
+            <div class="logoName">
                 <img id="logo" src="assets/logo.jpg" alt="Logo">
             </div>
         </div>
