feat: improve the overall layout of the website. Clean the code in index.thml and styles.css

--- a/index.html
+++ b/index.html
@@ -22,40 +22,63 @@
             <div class="featPhotoContents">
                 This is Me :DD
                 <img id="featPhoto" src="assets/myPhoto.jpg" alt="myPhoto">
-        </div>
-        <div class="prevProj">
-            My Previous Projects
-            <div class="prevProjPhotos">
-                <img class="prevProjPhotosContent" id="proj1" src="assets/proj1.jpg" alt="proj1">
-                <img class="prevProjPhotosContent"  id="proj2" src="assets/proj2.jpg" alt="proj2">
-                <img class="prevProjPhotosContent"  id="proj3" src="assets/proj3.jpg" alt="proj3">
-                <img class="prevProjPhotosContent"  id="proj4" src="assets/proj4.jpg" alt="proj4">
+            </div>
+            <div class="prevProj">
+                My Previous Projects
+                <div class="prevProjPhotos">
+                    <img class="prevProjPhotosContent" id="proj1" src="assets/proj1.jpg" alt="proj1">
+                    <img class="prevProjPhotosContent"  id="proj2" src="assets/proj2.jpg" alt="proj2">
+                    <img class="prevProjPhotosContent"  id="proj3" src="assets/proj3.jpg" alt="proj3">
+                    <img class="prevProjPhotosContent"  id="proj4" src="assets/proj4.jpg" alt="proj4">
+                </div>
+            </div>
+
+            <div class="aboutMe">
+                <div class="skills">
+                    My Skills
+                    <div class="skillsContent">
+                        <ul class="skillsList">
+                            <li> Coding </li>
+                            <li> Coding </li>
+                            <li> Coding </li>
+                            <li> Coding </li>
+                        </ul>
+                        <ul class="skillsList">
+                            <li> Coding </li>
+                            <li> Coding </li>
+                            <li> Coding </li>
+                            <li> Coding </li>
+                        </ul>
+                        <ul class="skillsList">
+                            <li> Coding </li>
+                            <li> Coding </li>
+                            <li> Coding </li>
+                            <li> Coding </li>
+                        </ul>
+                        <ul class="skillsList">
+                            <li> Coding </li>
+                            <li> Coding </li>
+                            <li> Coding </li>
+                            <li> Coding </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="autobio">
+                    AutoBiography
+                    <div class="autobioContent">
+                        <p>This is all about me. yap yap yap yap yap</p>
+                        <p>This is all about me. yap yap yap yap yap again HAHAHAHAHAHHAHA</p>
+                        <p>This is all about me. yap yap yap yap yap</p>
+                    </div>
+                </div>
+
             </div>
         </div>
 
-        <div class="aboutMe">
-            <div class="skills">
-                My Skills
-                <ul>
-                    <li> Coding </li>
-                    <li> Coding </li>
-                    <li> Coding </li>
-                    <li> Coding </li>
-                    <li> Coding </li>
-                </ul>
-            </div>
-            <div class="autobio">
-                AutoBiography
-                <ul>
-                    <li> Coding </li>
-                    <li> Coding </li>
-                    <li> Coding </li>
-                    <li> Coding </li>
-                    <li> Coding </li>
-                </ul>
-            </div>
-
-        </div>
+        <footer>
+            <p>This is a footer</p>
+            <p><a href="">example link</a></p>
+        </footer>
     </div>
 
   
