feat: add some css styles to the website

--- a/index.html
+++ b/index.html
@@ -11,20 +11,25 @@
     <div class="overallPage">
         <div class="navBar">
             <div class="navBarContent">
-                <a href="#home">Home</a>
-                <a href="#news">About Me</a>
+                <a href="">Home</a>
+                <a href="">My Projects</a>
+                <a href="">About Me</a>
+                <a href="">Contact Me</a>
             </div>
             <div class="logoName">
-                <img id="logo" src="assets/logo.jpg" alt="Logo">
+                <img id="logo" src="assets/logo.png" alt="Logo">
             </div>
         </div>
         <div class="bodyContent">
             <div class="featPhotoContents">
+                <img class="featPhoto" src="assets/myPhoto.jpg" alt="myPhoto">
                 This is Me :DD
-                <img id="featPhoto" src="assets/myPhoto.jpg" alt="myPhoto">
             </div>
             <div class="prevProj">
-                My Previous Projects
+                <div class="bodyTitles">
+                    My Previous Projects
+                </div>
+                
                 <div class="prevProjPhotos">
                     <img class="prevProjPhotosContent" id="proj1" src="assets/proj1.jpg" alt="proj1">
                     <img class="prevProjPhotosContent"  id="proj2" src="assets/proj2.jpg" alt="proj2">
@@ -35,7 +40,10 @@
 
             <div class="aboutMe">
                 <div class="skills">
-                    My Skills
+                    <div class="bodyTitles">
+                        My Skills
+                    </div>
+                    
                     <div class="skillsContent">
                         <ul class="skillsList">
                             <li> Coding </li>
@@ -64,7 +72,9 @@
                     </div>
                 </div>
                 <div class="autobio">
-                    AutoBiography
+                    <div class="bodyTitles">
+                        Autobiography
+                    </div>
                     <div class="autobioContent">
                         <p>This is all about me. yap yap yap yap yap</p>
                         <p>This is all about me. yap yap yap yap yap again HAHAHAHAHAHHAHA</p>
@@ -75,8 +85,10 @@
             </div>
         </div>
 
-        <footer>
-            <p>This is a footer</p>
+        <footer class="footer">
+            <div class="logoName">
+                <img id="logo" src="assets/logo.png" alt="Logo">
+            </div>
             <p><a href="">example link</a></p>
         </footer>
     </div>
