feat: add the new .gif files to accompany the website along with other additional details about myself

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
                 </div>
                 
                 <div class="projContRight">
-                    <img class="prevProjPhotosContent" id="proj1" src="assets/proj1.jpg" alt="proj1"> 
+                    <img class="prevProjPhotosContent" id="proj1" src="assets/proj1.gif" alt="proj1"> 
                 </div>
                 <div class="projContLeft"> 
-                    <img class="prevProjPhotosContent"  id="proj2" src="assets/proj2.jpg" alt="proj2">
+                    <img class="prevProjPhotosContent"  id="proj2" src="assets/proj2.gif" alt="proj2">
                 </div>
                 <div class="projContRight">
-                    <img class="prevProjPhotosContent"  id="proj3" src="assets/proj3.jpg" alt="proj3">
+                    <img class="prevProjPhotosContent"  id="proj3" src="assets/proj3.gif" alt="proj3">
                 </div>
             </div>
 
@@ -47,9 +47,11 @@
                     Autobiography
                 </div>
                 <div class="autobioContent">
-                    <p>This is all about me. yap yap yap yap yap</p>
-                    <p>This is all about me. yap yap yap yap yap again HAHAHAHAHAHHAHA</p>
-                    <p>This is all about me. yap yap yap yap yap</p>
+                    <p>Hi! My name is Lawrence Joel J. Macatangay! I am a computer science student studying in the 
+                        University of the Philippines.  In my spare time, I like to play a lot of video games, 
+                        especially ones that challenges me to analyze strategies and think critically.
+                         Games like chess, puzzle-solving adventures, and strategy-based RPGs are some of my favorites. 
+                         Aside from gaming, I also enjoy exploring new technologies, coding personal projects, and learning about anything that interests me! </p>
                 </div>
             </div>
             <div id="skills">
