--- a/index.html
+++ b/index.html
@@ -31,14 +31,17 @@
                     My Previous Projects
                 </div>
                 
-                <div class="projContRight">
-                    <img class="prevProjPhotosContent" id="proj1" src="assets/proj1.gif" alt="proj1"> 
+                <div class="projCont">
+                    YSYNC is a web-based platform that simplifies the application process for YSES trainees, enabling seamless communication, collaboration, and access to key resources for trainees, mentors, and administrators.
+                    <img class="projPicRight" id="proj1" src="assets/proj1.gif" alt="proj1"> 
                 </div>
-                <div class="projContLeft"> 
-                    <img class="prevProjPhotosContent"  id="proj2" src="assets/proj2.gif" alt="proj2">
+                <div class="projCont">
+                    <img class="projPicLeft"  id="proj2" src="assets/proj2.gif" alt="proj2">
+                    Laban Jan! Jan Madugo! is an epic 2D fighting game that pits two players against each other in a battle of wits and strategy. Players must outsmart their opponents by predicting their moves and countering them with their own. 
                 </div>
-                <div class="projContRight">
-                    <img class="prevProjPhotosContent"  id="proj3" src="assets/proj3.gif" alt="proj3">
+                <div class="projCont">
+                        Lawmac's Typing Game Alpha is a simple yet fun typing game that aims to improve the player's typing speed and accuracy.
+                    <img class="projPicRight"  id="proj3" src="assets/proj3.gif" alt="proj3">
                 </div>
             </div>
 
@@ -47,11 +50,12 @@
                     Autobiography
                 </div>
                 <div class="autobioContent">
-                    <p>Hi! My name is Lawrence Joel J. Macatangay! I am a computer science student studying in the 
+                    <p>My name is Lawrence Joel J. Macatangay! I am a computer science student studying in the 
                         University of the Philippines.  In my spare time, I like to play a lot of video games, 
                         especially ones that challenges me to analyze strategies and think critically.
                          Games like chess, puzzle-solving adventures, and strategy-based RPGs are some of my favorites. 
-                         Aside from gaming, I also enjoy exploring new technologies, coding personal projects, and learning about anything that interests me! </p>
+                         Aside from gaming, I also enjoy exploring new technologies, coding personal projects, and learning about anything that interests me! 
+                    </p>
                 </div>
             </div>
             <div id="skills">
