style: layout and color improvement

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     <div class="overallPage">
         <div id="navBar">
             <div class="navBarContent">
-                <a href="#navbar">Home</a>
+                <a href="#bodyContent">Home</a>
                 <a href="#prevProj">My Projects</a>
-                <a href="#autobio">About Me</a>
                 <a href="#skills">Skills</a>
                 <a href="">Contact Me</a>
             </div>
@@ -21,14 +20,22 @@
                 <img id="logo" src="assets/logo.png" alt="Logo">
             </div>
         </div>
-        <div class="bodyContent">
+        <div class="bodyContent" id="bodyContent">
             <div id="featPhotoContents">
                 <img class="featPhoto" src="assets/myPhoto.jpg" alt="myPhoto">
-                This is Me :DD
+                <div class="featPhotoTexts">
+                    <h1>Hello ^__^ </h1>
+                    <p>My name is Lawrence Joel J. Macatangay! I am a computer science student studying in the 
+                        University of the Philippines - Los Baños.  In my spare time, I like to play a lot of video games, 
+                        especially ones that challenges me to analyze strategies and think critically. 
+                        I also enjoy exploring new technologies, coding personal projects, and learning about anything that interests me! 
+                    </p>
+                </div>
+
             </div>
-            <div id="prevProj">
+            <div class="prevProj" id="prevProj">
                 <div class="bodyTitles">
-                    My Previous Projects
+                    MY PROJECTS
                 </div>
                 
                 <div class="projCont">
@@ -44,23 +51,9 @@
                     <img class="projPicRight"  id="proj3" src="assets/proj3.gif" alt="proj3">
                 </div>
             </div>
-
-            <div id="autobio">
+            <div class="skills" id="skills">
                 <div class="bodyTitles">
-                    Autobiography
-                </div>
-                <div class="autobioContent">
-                    <p>My name is Lawrence Joel J. Macatangay! I am a computer science student studying in the 
-                        University of the Philippines.  In my spare time, I like to play a lot of video games, 
-                        especially ones that challenges me to analyze strategies and think critically.
-                         Games like chess, puzzle-solving adventures, and strategy-based RPGs are some of my favorites. 
-                         Aside from gaming, I also enjoy exploring new technologies, coding personal projects, and learning about anything that interests me! 
-                    </p>
-                </div>
-            </div>
-            <div id="skills">
-                <div class="bodyTitles">
-                    My Skills
+                    MY SKILLS
                 </div>
                 
                 <div class="skillsContent">
