feat: add skills info with pics

--- a/index.html
+++ b/index.html
@@ -55,34 +55,19 @@
                 <div class="bodyTitles">
                     MY SKILLS
                 </div>
-                
-                <div class="skillsContent">
-                    Technical Skills
-                    <ul class="skillsList">
-                        <li> Coding </li>
-                        <li> Playing  </li>
-                        <li> Coding </li>
-                        <li> Coding </li>
-                    </ul>
-                    Soft Skills
-                    <ul class="skillsList">
-                        <li> Coding </li>
-                        <li> Coding </li>
-                        <li> Coding </li>
-                        <li> Coding </li>
-                    </ul>
-                    <!-- <ul class="skillsList">
-                        <li> Coding </li>
-                        <li> Coding </li>
-                        <li> Coding </li>
-                        <li> Coding </li>
-                    </ul>
-                    <ul class="skillsList">
-                        <li> Coding </li>
-                        <li> Coding </li>
-                        <li> Coding </li>
-                        <li> Coding </li>
-                    </ul> -->
+                <div class="techSkills">
+                    <img class="techSkillsPic" src="assets/python.png" alt="Logo">
+                    <img class="techSkillsPic" src="assets/html.png" alt="Logo">
+                    <img class="techSkillsPic" src="assets/css.png" alt="Logo">
+                    <img class="techSkillsPic" src="assets/c.png" alt="Logo">
+                    <img class="techSkillsPic" src="assets/r.png" alt="Logo">
+                    <img class="techSkillsPic" src="assets/java.png" alt="Logo">
+                    <img class="techSkillsPic" src="assets/react.png" alt="Logo">
+                    <img class="techSkillsPic" src="assets/mongodb.png" alt="Logo">
+
+                </div>
+                <div class="softSkills">
+                    
                 </div>
             </div>
 
