feat: add footer and page rights

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <a href="#bodyContent">Home</a>
                 <a href="#prevProj">My Projects</a>
                 <a href="#skills">Skills</a>
-                <a href="">Contact Me</a>
+                <a href="#footer">Contact Me</a>
             </div>
             <div class="logoName">
                 <img id="logo" src="assets/logo.png" alt="Logo">
@@ -24,11 +24,10 @@
             <div id="featPhotoContents">
                 <img class="featPhoto" src="assets/myPhoto.jpg" alt="myPhoto">
                 <div class="featPhotoTexts">
-                    <h1>Hello ^__^ </h1>
+                    <h1>helloo ^__^ </h1>
                     <p>My name is Lawrence Joel J. Macatangay! I am a computer science student studying in the 
-                        University of the Philippines - Los Baños.  In my spare time, I like to play a lot of video games, 
-                        especially ones that challenges me to analyze strategies and think critically. 
-                        I also enjoy exploring new technologies, coding personal projects, and learning about anything that interests me! 
+                        University of the Philippines - Los Baños. 
+                        I enjoy exploring new technologies, coding personal projects, and learning about anything that interests me! 
                     </p>
                 </div>
 
@@ -73,12 +72,37 @@
 
         </div>
 
-        <footer class="footer">
-            <div class="logoName">
-                <img id="logo" src="assets/logo.png" alt="Logo">
+        <div class="footer" id="footer">
+            <div class="footerLogoContainer">
+                <img id="footerLogo" src="assets/logo.png" alt="Logo">
             </div>
-            <p><a href="">example link</a></p>
-        </footer>
+            <div class="wheretofindme">
+                where to find me
+            </div>
+            <div class="totalContacts">
+                <div class="contacts">
+                    <img class="contactsPic" src="assets/github.png" alt="Logo">
+                    <a href="https://github.com/loopsidoop" target="_blank">Github</a> 
+                </div>
+                <div class="contacts">
+                    <img class="contactsPic" src="assets/email.png" alt="Logo">
+                    lawmacj16@gmail.com
+                </div>
+                <div class="contacts">
+                    <img class="contactsPic" src="assets/facebook.png" alt="Logo">
+                    <a href="https://www.facebook.com/lawrencejoel.macatangay.1" target="_blank">Facebook</a> 
+                </div>
+                <div class="contacts">
+                    <img class="contactsPic" src="assets/phone.png" alt="Logo">
+                    09763042362
+                </div>
+            </div>
+ 
+        </div>
+
+        <div class="pageRights">
+            © 2025 by Lawrence Joel J. Macatangay. Proudly created with HTML and CSS. All Rights Reserved.
+        </div>
     </div>
 
   
