--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Macatangay Portfolio</title>
-    <link rel="icon" href="./assets/logo.png">
+    <link rel="icon" href="./assets/logowhitebg.png">
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
