docs: update index.html documentation

--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Macatangay Portfolio</title>
+    <!-- website tab icon -->
     <link rel="icon" href="./assets/logowhitebg.png">
+    <!-- the css link -->
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+    <!-- the overall page -->
     <div class="overallPage">
+        <!-- navigation bar -->
         <div id="navBar">
             <div class="navBarContent">
                 <a href="#bodyContent">Home</a>
@@ -21,9 +25,12 @@
                 <img id="logo" src="assets/logo.png" alt="Logo">
             </div>
         </div>
+        <!-- whole body -->
         <div class="bodyContent" id="bodyContent">
+            <!-- featured photo and autobiography -->
             <div id="featPhotoContents">
                 <img class="featPhoto" src="assets/myPhoto.jpg" alt="myPhoto">
+                <!-- autobio texts -->
                 <div class="featPhotoTexts">
                     <h1>helloo ^__^ </h1>
                     <p>My name is Lawrence Joel J. Macatangay! I am a computer science student studying in the 
@@ -33,11 +40,11 @@
                 </div>
 
             </div>
+            <!-- my projects -->
             <div class="prevProj" id="prevProj">
                 <div class="bodyTitles">
                     MY PROJECTS
                 </div>
-                
                 <div class="projCont">
                     YSYNC is a web-based platform that simplifies the application process for YSES trainees, enabling seamless communication, collaboration, and access to key resources for trainees, mentors, and administrators.
                     <img class="projPicRight" id="proj1" src="assets/proj1.gif" alt="proj1"> 
@@ -51,6 +58,7 @@
                     <img class="projPicRight"  id="proj3" src="assets/proj3.gif" alt="proj3">
                 </div>
             </div>
+            <!-- skills -->
             <div class="skills" id="skills">
                 <div class="bodyTitles">
                     MY SKILLS
@@ -66,13 +74,10 @@
                     <img class="techSkillsPic" src="assets/mongodb.png" alt="Logo">
 
                 </div>
-                <div class="softSkills">
-                    
-                </div>
             </div>
 
         </div>
-
+        <!-- footer -->
         <div class="footer" id="footer">
             <div class="footerLogoContainer">
                 <img id="footerLogo" src="assets/logo.png" alt="Logo">
@@ -100,7 +105,7 @@
             </div>
  
         </div>
-
+        <!-- page rights -->
         <div class="pageRights">
             © 2025 by Lawrence Joel J. Macatangay. Proudly created with HTML and CSS. All Rights Reserved.
         </div>
